[tool.poetry]
name = "tw-complex"
version = "0.1.1"
description = "Algorithms for TW"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rafsaf/tw-complex"
authors = ["rafsaf <rafal.safin12@gmail.com>"]
keywords = ["Python", "Tribal Wars",]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.3"
scipy = "^1.6.3"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.5b1", allow-prereleases = true}
matplotlib = "^3.4.2"
psutil = "^5.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


