[tool.poetry]
name = "tw-complex"
version = "1.0.3"
description = "Algorithms for TW"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rafsaf/tw-complex"
authors = ["rafsaf <rafal.safin12@gmail.com>"]
keywords = ["Python", "Tribal Wars",]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.2"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
matplotlib = "^3.5.1"
psutil = "^5.9.0"
PyQt5 = "^5.15.6"
flake8 = "^4.0.1"
autoflake = "^1.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests",
]
log_cli = "true"
log_cli_level = "INFO"
log_cli_format = "%(levelname)s:%(name)s - %(message)s"