[tool.poetry]
name = "tw-complex"
version = "1.1.0"
description = "Algorithms for TW"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rafsaf/tw-complex"
authors = ["rafsaf <rafal.safin12@gmail.com>"]
keywords = ["Python", "Tribal Wars"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = "^1.9.3"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
matplotlib = "^3.6.1"
psutil = "^5.9.3"
flake8 = "^5.0.4"
autoflake = "^1.7.7"
PyQt5 = "^5.15.7"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = ["tests"]
log_cli = "true"
log_cli_level = "INFO"
log_cli_format = "%(levelname)s:%(name)s - %(message)s"
